--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16841 2016/12/30 11:15:43 jaapb Exp $
+$NetBSD: TODO,v 1.16842 2017/01/01 07:31:33 mef Exp $
 
 Suggested new packages
 ======================
@@ -667,7 +667,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fish-2.2.0
 	o flashplayer-0.4.13
 	o flashrom-0.9.8
-	o fldigi-3.23.19
 	o flightgear-2.12
 	o flightgear-data-3.4.0
 	o flow-tools-0.411
