--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16842 2017/01/01 07:31:33 mef Exp $
+$NetBSD: TODO,v 1.16843 2017/01/01 08:43:15 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -433,7 +433,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o argon2-20151206
 	o argtable-2.9
 	o argus-20121202
-	o aria2-1.26.0
 	o aribas-1.64
 	o arirang-1.70
 	o arnold-20040104
