--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16843 2017/01/01 08:43:15 ryoon Exp $
+$NetBSD: TODO,v 1.16844 2017/01/01 11:40:06 wiz Exp $
 
 Suggested new packages
 ======================
@@ -358,6 +358,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o GMT-5.1.1
 	o GNUMail-1.2.2
 	o Gorm-1.2.22
+	o ImageMagick-7.0.4.1
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
 	o MesaDemos-8.3.0
@@ -381,7 +382,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o SOPE-3.0.2
 	o TiffIO-140a
 	o YoSucker-81
-	o abcm2ps-8.13.2
+	o abcm2ps-8.13.3
 	o abcmidi-20160505
 	o abook-0.6.1
 	o accerciser-3.22.0
@@ -403,7 +404,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o alephone-20150620
 	o alevt-1.6.2
 	o allegro-5.10
-	o alsa-lib-1.1.2
+	o alsa-lib-1.1.3
 	o alsa-plugins-1.1.0
 	o amavis-perl-0.3.12 [called just amavis]
 	o amaya-11.4.4 [wip]
@@ -426,6 +427,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ap22-authnz-external-3.3.2
 	o ap22-limitipconn-0.24
 	o ap22-vhost-ldap-2.4.0
+	o apache-ant-1.10.0
 	o apache-ivy-2.4.0
 	o apollo-1.7
 	o apr0-2.4.1
@@ -470,6 +472,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o binutils-2.27
 	o bird-1.5.0
 	o bird6-1.5.0
+	o blas-3.7.0
 	o blender-2.78a
 	o bliz++-0.10
 	o blur6ex-0.3.462
@@ -492,6 +495,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cal3d-0.11.0
 	o calc-2.11.10.1
 	o calcoo-2.1.0
+	o calibre-2.76
 	o calligra-2.9.9 [in wip; koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
@@ -664,8 +668,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fillets-ng-0.7.4
 	o fillets-ng-data-0.7.4
 	o fish-2.2.0
+	o flac-1.3.2
 	o flashplayer-0.4.13
 	o flashrom-0.9.8
+	o flex-2.6.3
 	o flightgear-2.12
 	o flightgear-data-3.4.0
 	o flow-tools-0.411
@@ -929,7 +935,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ja-vflib-utils-2.25.6
 	o ja-vfxdvik-22.40y1
 	o jabberd-1.6.1.1
-	o jasper-2.0.6
+	o jasper-2.0.10
 	o java-db3-3.87
 	o java-rxtx-2.1.17
 	o jcabc2ps-20150524
@@ -975,6 +981,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o kstart-4.2
 	o ktorrent3-3.3.4
 	o labelnation-1.218
+	o lapack-3.7.0
 	o latex2html-2015
 	o lbdb-0.40
 	o lcc-4.2
@@ -1065,7 +1072,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o makeself-2.2.0
 	o maketool-0.8.4
 	o makeztxt-1.60
-	o mame-0.180
+	o mame-0.181
 	o manedit-1.2.1
 	o mapserver-7.0.1
 	o matchbox-panel-0.9.3
@@ -1096,6 +1103,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o minivmac-3.2.3
 	o miredo-1.2.4
 	o mit-scheme-bin-9.2
+	o mitmproxy-1.0
 	o mksh-52b
 	o modular-xorg-xquartz-1.18.0
 	o molden-4.8 [after which PR 40252 can be closed]
@@ -1165,6 +1173,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o oo2c-2.1.7
 	o opal-3.16.2
 	o opencsg-1.4.0
+	o opencv-3.2
 	o openh323-1.19.1
 	o openmortal-0.7.1
 	o openoffice-4.1
@@ -1189,6 +1198,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Chart-3.2
 	o p5-DBD-DB2-1.85
 	o p5-DBD-SQLite-1.54
+	o p5-DB_File-1.840
 	o p5-FormValidator-Simple-1.00
 	o p5-GStreamer-0.20
 	o p5-GraphViz2-2.37
@@ -1198,6 +1208,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Heap-1.04
 	o p5-IP-Country-3.03
 	o p5-Memoize-Memcached-0.11
+	o p5-Net-DNS-1.07
 	o p5-Net-ManageSieve-0.13
 	o p5-NetPacket-1.6.0
 	o p5-Netdisco-2.033001
@@ -1215,6 +1226,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Padre-Plugin-Nopaste-0.08
 	o p5-Padre-Plugin-SpellCheck-1.33
 	o p5-Padre-Plugin-XS-0.12
+	o p5-Params-ValidationCompiler-0.22
 	o p5-PostScript-2.32
 	o p5-PostScript-Simple-1.02
 	o p5-Publican-4.3.2
@@ -1265,6 +1277,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o php-pdflib-3.0.4 (require pdflib 7 or later)
 	o php-phrasea2-3.8.6 (php-phrasea-3.8.6?)
 	o php-pthread-3.1.6
+	o php-pthreads-3.1.6
 	o php-rrd-2.0.0
 	o php-soycms-1.8.11
 	o php-tiki6-6.14
@@ -1322,6 +1335,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.19
 	o py-acora-1.9
+	o py-anki2-2.0.38
 	o py-apache-libcloud-0.20.1
 	o py-buildbot-0.9.1
 	o py-buildbot-slave-0.9.1
@@ -1377,6 +1391,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-wxWidgets-3.0.0
 	o py-yubiauth-0.3.10
 	o py-zconfig-3.0.3
+	o python-3.6.0
 	o pythontidy-1.23
 	o qbzr-0.23.2
 	o qlandkartegt-1.8.1 [pkg/49910]
@@ -1388,7 +1403,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o radare2-1.0.2
 	o radiance-4R1
 	o ragel-7.0.0.9
-	o rails-4.1.5
+	o rails-5.0.1
 	o rainbowcrack-1.5
 	o raine-0.64.9
 	o rakudo-star-2016.01
@@ -1425,6 +1440,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o rtcw-1.41.3
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o rubber-1.4
+	o ruby-2.4.0
 	o ruby-actionmailer-4.2.5
 	o ruby-actionpack-4.2.5
 	o ruby-activemodel-4.2.5
@@ -1439,7 +1455,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ruby-review-1.4.0 [wip]
 	o ruby-selenium-webdriver-2.46.2
 	o rump-20131213
-	o rust-1.13
+	o rust-1.14
 	o sabayon-2.30.1 [GNOME 2.30]
 	o sablecc-3.7
 	o samba-4.5.1
@@ -1634,6 +1650,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wbm-virtual-server-5.01
 	o wcalc-2.4
 	o webalizer-2.23.05
+	o webkit24-gtk-2.14.2
 	o webmin-1.780
 	o websvn-2.3.3
 	o weewm-0.01
@@ -1650,7 +1667,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o worker-3.8.3
 	o wxGTK-3.1.0
 	o wxRemind-101
-	o x264-devel-20161224
+	o x264-devel-20161231
 	o x2vnc-1.31
 	o xa65-2.3.7
 	o xaric-0.13.7
