--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16845 2017/01/01 11:50:25 leot Exp $
+$NetBSD: TODO,v 1.16846 2017/01/01 12:30:33 adam Exp $
 
 Suggested new packages
 ======================
@@ -662,13 +662,11 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fet-5.28.6
 	o fetchmail-6.3.26
 	o fetchyahoo-2.14.0
-	o ffmpeg2-2.8.10
 	o filerunner-14.06.18.10
 	o filezilla-3.23.0.2
 	o fillets-ng-0.7.4
 	o fillets-ng-data-0.7.4
 	o fish-2.2.0
-	o flac-1.3.2
 	o flashplayer-0.4.13
 	o flashrom-0.9.8
 	o flex-2.6.3
