--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16846 2017/01/01 12:30:33 adam Exp $
+$NetBSD: TODO,v 1.16847 2017/01/01 13:51:34 wiz Exp $
 
 Suggested new packages
 ======================
@@ -382,7 +382,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o SOPE-3.0.2
 	o TiffIO-140a
 	o YoSucker-81
-	o abcm2ps-8.13.3
 	o abcmidi-20160505
 	o abook-0.6.1
 	o accerciser-3.22.0
