--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16854 2017/01/01 14:35:38 adam Exp $
+$NetBSD: TODO,v 1.16855 2017/01/01 14:46:37 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1326,7 +1326,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-Scientific-doc-2.5.5
 	o py-Unidecode-0.04.19
 	o py-acora-1.9
-	o py-anki2-2.0.38
 	o py-apache-libcloud-0.20.1
 	o py-buildbot-0.9.1
 	o py-buildbot-slave-0.9.1
