--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16857 2017/01/01 15:18:05 adam Exp $
+$NetBSD: TODO,v 1.16858 2017/01/01 15:23:08 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1350,7 +1350,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-jaraco_util-11.0
 	o py-jdcal-1.2
 	o py-keybinder-0.3.1
-	o py-lxml-3.7.1
 	o py-mezzanine-4.2.2
 	o py-munkres-1.0.7
 	o py-musicbrainz-0.7.4
