--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16864 2017/01/01 16:00:15 wiz Exp $
+$NetBSD: TODO,v 1.16865 2017/01/01 21:50:36 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -1369,7 +1369,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-static-1.1.1
 	o py-suds-0.4.1
 	o py-sybase-0.37
-	o py-tlslite-0.4.6
 	o py-tornado-4.4.1
 	o py-wxWidgets-3.0.0
 	o py-yubiauth-0.3.10
